# simple-alto-parser

./: .gitignore  MANIFEST.in  README.md  dict_tester.py  example_use.py  example_use_1923.py  example_use_19XX.py  example_use_a.py  main.py  setup.cfg  setup.py  tests.py
assets/alto/: bscc_0144_ab1cd.alto  bscc_0145_ab2cd.alto
assets/alto/a_batch/: bscc_0014.alto  bscc_0016.alto  bscc_0018.alto  bscc_0020.alto  bscc_0022.alto  bscc_0024.alto  bscc_0026.alto  bscc_0028.alto  bscc_0030.alto  bscc_0032.alto  bscc_0034.alto  bscc_0036.alto  bscc_0038.alto  bscc_0040.alto  bscc_0042.alto  bscc_0044.alto  bscc_0046.alto  bscc_0048.alto  bscc_0050.alto  bscc_0052.alto  bscc_0054.alto  bscc_0056.alto  bscc_0058.alto  bscc_0060.alto  bscc_0062.alto  bscc_0064.alto  bscc_0066.alto  bscc_0068.alto  bscc_0070.alto  bscc_0072.alto  bscc_0074.alto  bscc_0076.alto  bscc_0078.alto  bscc_0080.alto  bscc_0082.alto  bscc_0084.alto  bscc_0086.alto  bscc_0088.alto  bscc_0090.alto  bscc_0092.alto  (+10 more)
assets/data/: 1923_0040.xml  1923_0041.xml  1923_0042.xml  1923_0043.xml  bscc_0143.alto
assets/dicts/: companies.json  locations.json
simple_alto_parser/: __init__.py  alto_file.py  alto_file_exporter.py  alto_file_parser.py  alto_file_parts.py  pattern_parser.py  text_parser.py
