[metadata]
name = django-ndr-core
description = A Django app to search and view data from an API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://django-ndr-core.readthedocs.io/en/latest/
author = Sorin Marti, Lea Kasper
author_email = sorin.marti@gmail.com, lea.kasper@unibas.ch
license = G
classifiers =
    Development Status :: 4 - Beta
    
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
